--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/material-top-tabs": "^7.1.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
+    "@types/react-navigation": "^3.0.8",
     "lottie-ios": "^4.5.1",
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
@@ -21,6 +23,7 @@
     "react-native-biometrics": "^3.0.1",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "^6.7.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
