--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "react-native-gesture-handler": "^2.24.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.7.0",
+    "react-native-paper": "^5.13.1",
     "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
+    "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
@@ -41,7 +44,8 @@
     "@react-native/metro-config": "0.78.0",
     "@react-native/typescript-config": "0.78.0",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
+    "@types/react": "^19.0.10",
+    "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
