--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-navigation": "^3.0.8",
     "lottie-ios": "^4.5.1",
     "lottie-react-native": "^7.2.2",
+    "moti": "^0.30.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-biometrics": "^3.0.1",
