duplicate requests not allowed

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -21,8 +21,8 @@
   },
   {
     "project_Id": "3",
-    "project_description": "Project B",
-    "long_project_description": "Description of Project B",
+    "project_description": "Project C",
+    "long_project_description": "Description of Project C",
     "assigned_to": "Worker 2",
     "project_start_date": "2025-02-01",
     "project_end_date": "2025-10-31",
@@ -31,8 +31,8 @@
   },
   {
     "project_Id": "4",
-    "project_description": "Project B",
-    "long_project_description": "Description of Project B",
+    "project_description": "Project D",
+    "long_project_description": "Description of Project D",
     "assigned_to": "Worker 2",
     "project_start_date": "2025-02-01",
     "project_end_date": "2025-10-31",
@@ -41,8 +41,8 @@
   },
   {
     "project_Id": "5",
-    "project_description": "Project B",
-    "long_project_description": "Description of Project B",
+    "project_description": "Project E",
+    "long_project_description": "Description of Project E",
     "assigned_to": "Worker 2",
     "project_start_date": "2025-02-01",
     "project_end_date": "2025-10-31",
@@ -51,8 +51,8 @@
   },
   {
     "project_Id": "6",
-    "project_description": "Project B",
-    "long_project_description": "Description of Project B",
+    "project_description": "Project F",
+    "long_project_description": "Description of Project F",
     "assigned_to": "Worker 2",
     "project_start_date": "2025-02-01",
     "project_end_date": "2025-10-31",
@@ -61,8 +61,8 @@
   },
   {
     "project_Id": "7",
-    "project_description": "Project B",
-    "long_project_description": "Description of Project B",
+    "project_description": "Project G",
+    "long_project_description": "Description of Project G",
     "assigned_to": "Worker 2",
     "project_start_date": "2025-02-01",
     "project_end_date": "2025-10-31",
@@ -71,8 +71,8 @@
   },
   {
     "project_Id": "8",
-    "project_description": "Project B",
-    "long_project_description": "Description of Project B",
+    "project_description": "Project H",
+    "long_project_description": "Description of Project H",
     "assigned_to": "Worker 2",
     "project_start_date": "2025-02-01",
     "project_end_date": "2025-10-31",
@@ -81,8 +81,8 @@
   },
   {
     "project_Id": "9",
-    "project_description": "Project B",
-    "long_project_description": "Description of Project B",
+    "project_description": "Project I",
+    "long_project_description": "Description of Project I",
     "assigned_to": "Worker 2",
     "project_start_date": "2025-02-01",
     "project_end_date": "2025-10-31",
@@ -91,8 +91,8 @@
   },
   {
     "project_Id": "10",
-    "project_description": "Project B",
-    "long_project_description": "Description of Project B",
+    "project_description": "Project J",
+    "long_project_description": "Description of Project J",
     "assigned_to": "Worker 2",
     "project_start_date": "2025-02-01",
     "project_end_date": "2025-10-31",
