--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,13 +86,23 @@ android {
         versionName "1.0"
     }
     signingConfigs {
+        release {
+            if (project.hasProperty('VAMPUP_UPLOAD_STORE_FILE')) {
+                storeFile file(VAMPUP_UPLOAD_STORE_FILE)
+                storePassword VAMPUP_UPLOAD_STORE_PASSWORD
+                keyAlias VAMPUP_UPLOAD_KEY_ALIAS
+                keyPassword VAMPUP_UPLOAD_KEY_PASSWORD
+            }
+        }
+    }
+    signingConfigs {
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
-    }
+    } 
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
@@ -103,6 +113,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
 }
