--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,9 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+
+VAMPUP_UPLOAD_STORE_FILE=my-upload-key.keystore
+VAMPUP_UPLOAD_KEY_ALIAS=my-key-alias
+VAMPUP_UPLOAD_STORE_PASSWORD=123456
+VAMPUP_UPLOAD_KEY_PASSWORD=123456
