--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "@types/react-navigation": "^3.0.8",
+    "axios": "^1.8.4",
     "lottie-ios": "^4.5.1",
     "lottie-react-native": "^7.2.2",
     "moti": "^0.30.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-biometrics": "^3.0.1",
+    "react-native-date-picker": "^5.0.10",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-linear-gradient": "^2.8.3",
