--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-date-picker": "^5.0.10",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-image-picker": "^8.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
