--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.8.4",
     "lottie-ios": "^4.5.1",
     "lottie-react-native": "^7.2.2",
+    "lucide-react-native": "^0.511.0",
     "moti": "^0.30.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
